--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,9 +20,15 @@
         <td><%= post.description %></td>
         <td><%= post.type %></td>
         <td><%= post.life_cycle %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if can? :read, @post %>
+          <td><%= link_to 'Show', post %></td>
+        <% end %>
+        <% if can? :update, @post %>
+          <td><%= link_to 'Edit', edit_post_path(post) %></td>
+        <% end %>
+        <% if can? :destroy, @post %>
+          <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +36,6 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<% if can? :create, @post %>
+  <%= link_to 'New Post', new_post_path %>
+<% end %>
