--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,5 +20,7 @@
   <%= @post.life_cycle %>
 </p>
 
+<% if can? :update, @post %>
 <%= link_to 'Edit', edit_post_path(@post) %> |
+<% end %>
 <%= link_to 'Back', posts_path %>
