--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,20 +1,11 @@
 %h2 Sign up
 
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| 
+= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| 
   = devise_error_messages! 
 
-  %div= f.label :email
-  	%br
-  	= f.email_field :email, autofocus: true
-
-  %div= f.label :password
-  	%br
-    = f.password_field :password, autocomplete: "off"
-
-  %div= f.label :password_confirmation
-  	%br
-    = f.password_field :password_confirmation, autocomplete: "off"
-
-  %div= f.submit "Sign up"
+  = f.input :email, autofocus: true
+  = f.input :password, autocomplete: "off"
+  = f.input :password_confirmation, autocomplete: "off"
+  = f.submit "Sign up"
 
 = render "devise/shared/links" 
