--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,6 @@
   %span Здравствуйте, #{current_user.email} 
   = link_to 'Выйти', destroy_user_session_path, :method => :delete 
 - else
-  = "#{link_to 'Войти', new_user_session_path} или #{link_to 'Зарегистрироваться', new_user_registration_path}" 
+  %p #{link_to 'Войти', new_user_session_path} или #{link_to 'Зарегистрироваться', new_user_registration_path}
 
 = yield 
