--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,12 +5,22 @@
   = javascript_include_tag "application", "data-turbolinks-track" => true 
   = csrf_meta_tags 
 %body
+%div.navbar.navbar-fixed-top.navbar-inverse
+  %div.navbar-inner
+    %div.container
+      %div.nav-collapse
+        %ul.nav
+          %li= link_to "Browse Products", posts_path 
+          %li= link_to "Price List" 
+          %li= link_to "Contact Us" 
+          %li= link_to "Cart"
+      %div.nav.pull-right    
+        - if user_signed_in?
+          %span Здравствуйте, #{current_user.email} 
+          = link_to 'Выйти', destroy_user_session_path, :method => :delete 
+        - else
+        %p #{link_to 'Войти', new_user_session_path} или #{link_to 'Зарегистрироваться', new_user_registration_path} 
+
 %p.notice= notice 
 %p.alert= alert 
-- if user_signed_in?
-  %span Здравствуйте, #{current_user.email} 
-  = link_to 'Выйти', destroy_user_session_path, :method => :delete 
-- else
-  %p #{link_to 'Войти', new_user_session_path} или #{link_to 'Зарегистрироваться', new_user_registration_path}
-
 = yield 
