--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -3,6 +3,8 @@
 = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = devise_error_messages!
 
+  = f.input :name
+  = f.input :last_name
   = f.input :email, autofocus: true 
 
   - if devise_mapping.confirmable? && resource.pending_reconfirmation? 
