--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,7 +2,9 @@
 
 = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| 
   = devise_error_messages! 
-
+  
+  = f.input :name
+  = f.input :last_name
   = f.input :email, autofocus: true
   = f.input :password, autocomplete: "off"
   = f.input :password_confirmation, autocomplete: "off"
