--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,5 +1,19 @@
-%h1 New post
-
-= render 'form'
-
-= link_to 'Back', posts_path
+%div.container-fluid
+  %div.row-fluid
+    %div.span3
+      %div.well.sidebar-nav
+        %ul.nav.nav-list
+          %li.nav-header Posts
+          %li.active= link_to "Create post", new_post_path
+          %li= link_to "All posts", profile_all_posts_path
+          %li= link_to "Draft", profile_draft_path
+          %li= link_to "New posts", profile_new_posts_path
+          %li= link_to "Publish", profile_publish_path
+          %li= link_to "Archive", profile_archive_path
+          %li.nav-header My profile
+          %li= link_to "Edit profile", edit_user_registration_path
+    %div.span9
+      %div.row-fluid
+        %div.span12 
+          %h1 New post
+          = render 'form'
