--- a/app/views/profile/new_posts.html.haml
+++ b/app/views/profile/new_posts.html.haml
@@ -4,6 +4,7 @@
       %div.well.sidebar-nav
         %ul.nav.nav-list
           %li.nav-header Posts
+          %li= link_to "Create post", new_post_path
           %li= link_to "All posts", profile_all_posts_path
           %li= link_to "Draft", profile_draft_path
           %li.active= link_to "New posts", profile_new_posts_path
@@ -30,4 +31,4 @@
             %a{:class=>"btn", :href=>"#"} View details &raquo            
 %hr
 %footer
-  %p &copy; Company 2012
+  %p &copy; TZ 2014
