--- a/app/views/admin_profile/new_posts.html.haml
+++ b/app/views/admin_profile/new_posts.html.haml
@@ -4,12 +4,11 @@
       %div.well.sidebar-nav
         %ul.nav.nav-list
           %li.nav-header Posts
-          %li= link_to "Create post", new_post_path
-          %li= link_to "All posts", profile_all_posts_path
-          %li= link_to "Draft", profile_draft_path
-          %li.active= link_to "New posts", profile_new_posts_path
-          %li= link_to "Publish", profile_publish_path
-          %li= link_to "Archive", profile_archive_path
+          %li= link_to "All posts", admin_profile_all_posts_path
+          %li.active= link_to "New Posts", admin_profile_new_posts_path
+          %li.nav-header Users
+          %li= link_to "All users"
+          %li= link_to "New user", new_admin_profile_user_path
           %li.nav-header My profile
           %li= link_to "Edit profile", edit_user_registration_path
     %div.span9
@@ -22,7 +21,10 @@
               .btn= link_to 'View details &raquo', post
               - if can? :destroy, post
                 %p.btn= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }
-              = simple_form_for(post,url:profile_transaction_path, method: :post) do |f|
+              = simple_form_for(post,url:admin_profile_transaction_path, method: :post) do |f|
+                = f.hidden_field :id
+                .btn.btn-success= f.submit "Status approved"
+              = simple_form_for(post,url:admin_profile_transaction_for_approved_path, method: :post) do |f|
                 = f.hidden_field :id
                 .btn.btn-success= f.submit "Status draft"
 %hr
