--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,10 @@
       %div.nav-collapse
         %ul.nav
           %li= link_to "Browse Products", posts_path 
-          %li= link_to "Profile", profile_path 
+          - if current_user.role.user?
+            %li= link_to "Profile", profile_path 
+          - if current_user.role.admin?
+            %li= link_to "Admin profile", admin_profile_path
           %li= link_to "Contact Us" 
           %li= link_to "Cart"
       %div.navbar-text.pull-right   
