--- a/app/views/profile/draft.html.haml
+++ b/app/views/profile/draft.html.haml
@@ -26,7 +26,7 @@
                 %p.btn= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }
               = simple_form_for(post,url:profile_transaction_path, method: :post) do |f|
                 = f.hidden_field :id
-                .btn.btn-success= f.submit
+                .btn.btn-success= f.submit "Status new"
 %hr
 %footer
   %p &copy; TZ 2014
