Admin_and_user_profile_finish_backend

--- a/app/views/admin_profile/new_posts.html.haml
+++ b/app/views/admin_profile/new_posts.html.haml
@@ -6,6 +6,8 @@
           %li.nav-header Posts
           %li= link_to "All posts", admin_profile_all_posts_path
           %li.active= link_to "New Posts", admin_profile_new_posts_path
+          %li= link_to "Publish", admin_profile_publish_path
+          %li= link_to "Archive", admin_profile_archive_path
           %li.nav-header Users
           %li= link_to "All users"
           %li= link_to "New user", new_admin_profile_user_path
