--- a/app/views/admin_profile/archive.html.haml
+++ b/app/views/admin_profile/archive.html.haml
@@ -9,7 +9,7 @@
           %li= link_to "Publish", admin_profile_publish_path
           %li.active= link_to "Archive", admin_profile_archive_path
           %li.nav-header Users
-          %li= link_to "All users"
+          %li= link_to "All users", admin_profile_path
           %li= link_to "New user", new_admin_profile_user_path
           %li.nav-header My profile
           %li= link_to "Edit profile", edit_user_registration_path
