--- a/app/views/admin_profile/users/edit.html.haml
+++ b/app/views/admin_profile/users/edit.html.haml
@@ -4,12 +4,13 @@
       %div.well.sidebar-nav
         %ul.nav.nav-list
           %li.nav-header Posts
-          %li.active= link_to "Create post", new_post_path
-          %li= link_to "All posts", profile_all_posts_path
-          %li= link_to "Draft", profile_draft_path
-          %li= link_to "New posts", profile_new_posts_path
-          %li= link_to "Publish", profile_publish_path
-          %li= link_to "Archive", profile_archive_path
+          %li= link_to "All posts", admin_profile_all_posts_path
+          %li= link_to "New Posts", admin_profile_new_posts_path
+          %li= link_to "Publish", admin_profile_publish_path
+          %li= link_to "Archive", admin_profile_archive_path
+          %li.nav-header Users
+          %li.active= link_to "All users", admin_profile_path
+          %li= link_to "New user", new_admin_profile_user_path
           %li.nav-header My profile
           %li= link_to "Edit profile", edit_user_registration_path
     %div.span9
