--- a/app/views/admin_profile/users/show.html.haml
+++ b/app/views/admin_profile/users/show.html.haml
@@ -5,9 +5,13 @@
       %div.well.sidebar-nav
         %ul.nav.nav-list
           %li.nav-header Posts
-          %li= link_to "All posts", profile_all_posts_path
+          %li= link_to "All posts", admin_profile_all_posts_path
+          %li= link_to "New Posts", admin_profile_new_posts_path
+          %li= link_to "Publish", admin_profile_publish_path
+          %li= link_to "Archive", admin_profile_archive_path
           %li.nav-header Users
-          %li= link_to "All users", admin_profile_path
+          %li.active= link_to "All users", admin_profile_path
+          %li= link_to "New user", new_admin_profile_user_path
           %li.nav-header My profile
           %li= link_to "Edit profile", edit_user_registration_path
     %div.span9
