--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,17 +10,18 @@
     %div.container
       %div.nav-collapse
         %ul.nav
-          %li= link_to "Browse Products", posts_path 
-          - if current_user.role.user?
-            %li= link_to "Profile", profile_path 
-          - if current_user.role.admin?
-            %li= link_to "Admin profile", admin_profile_path
-          %li= link_to "Contact Us" 
+          %li= link_to "Browse Products", posts_path
+          - if user_signed_in?
+            - if current_user.role.user?
+              %li= link_to "Profile", profile_path
+            - if current_user.role.admin?
+              %li= link_to "Admin profile", admin_profile_path
+          %li= link_to "Contact Us"
           %li= link_to "Cart"
-      %div.navbar-text.pull-right   
+      %div.navbar-text.pull-right
         - if user_signed_in?
           %span Здравствуйте, #{current_user.email} 
-          = link_to 'Выйти', destroy_user_session_path, :method => :delete 
+          = link_to 'Выйти', destroy_user_session_path, :method => :delete
         - else
           %p #{link_to 'Войти', new_user_session_path} или #{link_to 'Зарегистрироваться', new_user_registration_path} 
 
