--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@post) do |f| 
+= simple_form_for @post do |f|
   - if @post.errors.any? 
     %div#error_explanation
       %h2 #{pluralize(@post.errors.count, "error")} prohibited this post from being saved:
@@ -6,7 +6,10 @@
       %ul
       - @post.errors.full_messages.each do |msg| 
         %li= msg 
-
-  = f.input :title 
+  = f.input :title
   = f.input :description
-  .btn.btn-success= f.submit
+  = f.simple_fields_for :images, :html => { :multipart => true } do |image|
+    = render 'image_fields', :f => image
+  .links
+    = link_to_add_association 'add image', f, :images
+  = f.submit
