--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,32 +1,15 @@
 #notice= notice
-%h1 Listing posts
-
-%table
-  %thead
-    %tr
-      %th Title
-      %th Description
-      %th Type
-      %th Life cycle
-      %th
-      %th
-      %th
-
-  %tbody
-    - @posts.each do |post| 
-      %tr
-        %td= post.title 
-        %td= post.description 
-        %td= post.type
-        %td= post.life_cycle 
-        - if can? :read, @post 
-          %td= link_to 'Show', post 
-        - if can? :update, @post 
-          %td= link_to 'Edit', edit_post_path(post) 
-        - if can? :destroy, @post
-          %td= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } 
-
-%br
-
-- if can? :create, @post 
-  = link_to 'New Post', new_post_path 
+%div.container-fluid
+  %div.row-fluid
+    %div.span12
+      %div.row-fluid
+        - @posts.each do |post|
+          %div.span4
+            %h2= post.title
+            -#= image_tag post.images.first.picture.url(:thumb)
+            %p= post.description
+            %p
+              .btn= link_to 'View details &raquo', post
+%hr
+%footer
+  %p &copy; TZ 2014
