--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,22 +1,13 @@
-#notice= notice 
-
-%p
-	%strong Title:
-	= @post.title 
-
-%p
-	%strong Description:
-	= @post.description
-
-%p
-	%strong Type:
-	= @post.type
-
-%p
-	%strong Life cycle:
-	= @post.life_cycle
-
-- if can? :update, @post 
-	= link_to 'Edit', edit_post_path(@post)
-
-= link_to 'Back', posts_path
+#notice= notice
+%div.container-fluid
+  %div.row-fluid
+    %div.span12
+      %div.row-fluid
+        %div.span8
+          %h2= @post.title
+          - @post.images.count.times do |i|
+            = image_tag @post.images[i-1].picture.url(:thumb)
+          %p= @post.description
+%hr
+%footer
+  %p &copy; TZ 2014
