--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -10,6 +10,7 @@
             %p= post.description
             %p
               .btn= link_to 'View details &raquo', post
+  %center= will_paginate @post
 %hr
 %footer
   %p &copy; TZ 2014
