--- a/app/views/profile/index.html.haml
+++ b/app/views/profile/index.html.haml
@@ -21,6 +21,7 @@
             %p= post.description
             %p
               .btn= link_to 'View details &raquo', post
+  %center= will_paginate @posts
 %hr
 %footer
   %p &copy; TZ 2014
