--- a/app/views/profile/new_posts.html.haml
+++ b/app/views/profile/new_posts.html.haml
@@ -25,6 +25,7 @@
               = simple_form_for(post,url:profile_transaction_path, method: :post) do |f|
                 = f.hidden_field :id
                 = f.submit "Status draft"
+  %center= will_paginate @posts
 %hr
 %footer
   %p &copy; TZ 2014
