--- a/app/views/profile/draft.html.haml
+++ b/app/views/profile/draft.html.haml
@@ -16,11 +16,11 @@
       %div.row-fluid
         - @posts.each do |post|
           %div.span4
-            %h2= post.title
-            -#= image_tag post.image.url(:thumb)
+            %h2= link_to post.title, post 
+            - if post.images.count > 0
+              = image_tag post.images[0].picture.url(:thumb)
             %p= post.description
             %p
-              .btn= link_to 'View details &raquo', post
               - if can? :update, post 
                 %p= link_to 'Edit', edit_post_path(post) 
               - if can? :destroy, post
