--- a/app/views/profile/new_posts.html.haml
+++ b/app/views/profile/new_posts.html.haml
@@ -16,10 +16,11 @@
       %div.row-fluid
         - @posts.each do |post|
           %div.span4
-            %h2= post.title
+            %h2= link_to post.title, post 
+            - if post.images.count > 0
+              = image_tag post.images[0].picture.url(:thumb)
             %p= post.description
             %p
-              .btn= link_to 'View details &raquo', post
               - if can? :destroy, post
                 %p.btn= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }
               = simple_form_for(post,url:profile_transaction_path, method: :post) do |f|
