--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,22 +1,40 @@
-%h2 Edit #{resource_name.to_s.humanize}
+%div.container-fluid
+  %div.row-fluid
+    %div.span3
+      %div.well.sidebar-nav
+        %ul.nav.nav-list
+          %li.nav-header Posts
+          %li= link_to "All posts", admin_profile_all_posts_path
+          %li= link_to "New Posts", admin_profile_new_posts_path
+          %li= link_to "Publish", admin_profile_publish_path
+          %li= link_to "Archive", admin_profile_archive_path
+          %li.nav-header Users
+          %li= link_to "All users", admin_profile_path
+          %li= link_to "New user", new_admin_profile_user_path
+          %li.nav-header My profile
+          %li.active= link_to "Edit profile", edit_user_registration_path
+    %div.span9
+      %div.row-fluid
+        %div.span12 
+          %h2 Edit #{resource_name.to_s.humanize}
 
-= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
+          = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+            = devise_error_messages!
 
-  = f.input :name
-  = f.input :last_name
-  = f.input :email, autofocus: true 
+            = f.input :name
+            = f.input :last_name
+            = f.input :email, autofocus: true 
 
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation? 
-    %div Currently waiting confirmation for: #{resource.unconfirmed_email}
+            - if devise_mapping.confirmable? && resource.pending_reconfirmation? 
+              %div Currently waiting confirmation for: #{resource.unconfirmed_email}
 
-  = f.input :password, autocomplete: "off"
-  = f.input :password_confirmation, autocomplete: "off"
-  = f.input :current_password, autocomplete: "off"
-  = f.submit "Update"
+            = f.input :password, autocomplete: "off"
+            = f.input :password_confirmation, autocomplete: "off"
+            = f.input :current_password, autocomplete: "off"
+            = f.submit "Update"
 
-%h3 Cancel my account
+          %h3 Cancel my account
 
-%p Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
+          %p Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
 
-= link_to "Back", :back 
+          = link_to "Back", :back 
